--- a/ILAS-solution-assignment-06-group6.tex
+++ b/ILAS-solution-assignment-06-group6.tex
@@ -83,5 +83,18 @@
 				  & = \left\lceil 15.3664 \right\rceil = 16
 			\end{align*}
 		\end{solution}
+		
+		\begin{problem}[4. AUC]
+				\end{problem}
+		
+				\begin{solution}		
+					\begin{enumerate}[(a)]
+						\item 
+							\begin{align*}
+								\textrm{Accuracy}_S(h) & = \frac{\textrm{\# Correctly Classified}}{\textrm{\#Test Examples}}\\
+												       & = \frac{990}{100} = 0.99
+							\end{align*}
+					\end{enumerate}
+				\end{solution}		
 
 	\end{document}
